--- a/BookApp/appsettings.json
+++ b/BookApp/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "your_connection_string_here"
+  }
+  // Other configuration settings...
 }
